@@ -71,7 +71,7 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi purus. Nullam id
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi purus. Nullam id ipsum. Pellentesque iaculis lacus sed turpis. Vestibulum ut diam. Vivamus ut mauris. Integer non lacus ac mauris venenatis convallis. Vivamus feugiat, urna vitae adipiscing adipiscing, nulla est placerat mi, nec cursus lorem dui venenatis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus viverra neque volutpat nisi. Quisque vehicula nulla condimentum dolor. Donec aliquam magna eu nunc.
 
 <!-- ###VOTE_LINK_SUB### begin -->
-<a href="javascript:void(0)" rel="nofollow" onclick="tx_ratings_submit('###REF###', ###VALUE###, '###CHECK###');return false"></a>
+<a href="javascript:void(0)" rel="nofollow" class="tx-ratings-star-###VALUE###" onclick="tx_ratings_submit('###REF###', ###VALUE###, '###CHECK###');return false"></a>
 <!-- ###VOTE_LINK_SUB### end -->
 
 </body>
