@@ -1,10 +1,15 @@
 .tx-ratings { position: relative; left: 0; top: 0; padding-top: 16px; margin: 5px 5px; }
 	.tx-ratings-display { position: absolute; left: 0; top: 0; height: 12px; }
-		.tx-ratings-grey-bar { position: absolute; left: 0; top: 0; width: 55px; height: 12px; background: url(rating_stars.gif) repeat-x; }
-		.tx-ratings-gold-bar { position: absolute; left: 0; top: 0; width: 0px; height: 12px; background: url(rating_stars.gif) repeat-x 0 -12px; }
-		.tx-ratings-vote-bar { position: absolute; left: 0; top: 0; width: 55px; height: 12px; }
-			.tx-ratings-vote-bar DIV A { display: block; float: left; width: 11px; height: 12px; }
+		.tx-ratings-grey-bar { position: absolute; left: 0; top: 0; width: 55px; height: 12px; background: url(rating_stars.gif) repeat-x; font-size: 1px; }
+		.tx-ratings-gold-bar { position: absolute; left: 0; top: 0; width: 0px; height: 12px; background: url(rating_stars.gif) repeat-x 0 -12px; font-size: 1px; font-size: 1px; }
+		.tx-ratings-vote-bar { position: absolute; left: 0; top: 0; width: 55px; height: 12px; font-size: 1px; }
+			.tx-ratings-vote-bar DIV A { position: absolute; left:0; top: 0; width: 11px; height: 12px; }
 				.tx-ratings-vote-bar DIV A:hover { background-image: url(rating_stars.gif); background-position: 0 -24px; }
+			.tx-ratings-vote-bar DIV A.tx-ratings-star-1 { left: 0px; width: 11px; z-index: 5; }
+			.tx-ratings-vote-bar DIV A.tx-ratings-star-2 { left: 0px; width: 22px; z-index: 4; }
+			.tx-ratings-vote-bar DIV A.tx-ratings-star-3 { left: 0px; width: 33px; z-index: 3; }
+			.tx-ratings-vote-bar DIV A.tx-ratings-star-4 { left: 0px; width: 44px; z-index: 2; }
+			.tx-ratings-vote-bar DIV A.tx-ratings-star-5 { left: 0px; width: 55px; z-index: 1; }
 			.tx-ratings-cleaner { clear: left; }
 	.tx-ratings-text { color: #606060; font-size: 11px; font-family: Helvetica,Arial; }
 	.tx-rating-display-wrap { position: absolute; left: 0; top: 0; font-size: 12px; visibility: hidden; z-index: 1; }
