@@ -8,3 +8,9 @@
 .tx-ratings-vote-bar DIV A { width: 25px; height: 25px; }
 .tx-ratings-vote-bar DIV A:hover { background-image: url(yvoschaap.gif); background-position: 0 -50px; }
 .tx-ratings-text { font-size: 10px; }
+
+.tx-ratings-vote-bar DIV A.tx-ratings-star-1 { left: 0px; width: 25px; z-index: 5; }
+.tx-ratings-vote-bar DIV A.tx-ratings-star-2 { left: 0px; width: 50px; z-index: 4; }
+.tx-ratings-vote-bar DIV A.tx-ratings-star-3 { left: 0px; width: 125px; z-index: 3; }
+.tx-ratings-vote-bar DIV A.tx-ratings-star-4 { left: 0px; width: 150px; z-index: 2; }
+.tx-ratings-vote-bar DIV A.tx-ratings-star-5 { left: 0px; width: 175px; z-index: 1; }
