@@ -3,6 +3,7 @@
 	* Fixes for 'mode' TS parameter
 	* Added flexform confguration to pi1 plugin
 	* Updated manual
+	* Added rollover effects for rating bar
 
 2008-02-04	Dmitry Dulepov	<dmitry@typo3.org>
 
